Configured Vite HMR and watch

--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
     "private": true,
     "type": "module",
     "scripts": {
+        "dev": "vite",
         "build": "tsc && vite build && vite build --ssr",
-        "dev": "vite"
+        "watch": "tsc && vite build && vite build --ssr && vite build --watch"
     },
     "devDependencies": {
         "@headlessui/react": "^2.0.0",
